# gstreamer-cpp-pipeline

./: .gitignore  CMakeLists.txt  README.md
include/: Pipeline.h
src/: Pipeline.cpp  main.cpp
